# Numerical_Methods_LAB4

./: README.md
Programms/: Tables.nb  Visualization.nb
Programms/Code/: CMakeLists.txt  Check.nb  Check3.nb  Check4.nb  Check5.nb  main.cpp
Programms/Code/Libs/: FileIO.h  PDEProblem.cpp  PDEProblem.h  SolvePDE.cpp  SolvePDE.h  algebra.h
QuastionReport/: Report_LAB3.aux  Report_LAB3.tex  Report_LAB4.tex
QuastionReport/style/: fn2kursstyle.sty
